# android-faiss

./: .gitignore  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/source/: CMakeLists.txt  log.h
app/src/main/cpp/source/faiss/: log.cpp
app/src/main/cpp/source/test/: CMakeLists.txt  main.cpp
app/src/main/java/io/datamachines/faiss/: MainActivity.java
